# animus-subject-linear

./: .gitignore  Cargo.toml  README.md  plugin.toml
.github/workflows/: ci.yml  release.yml
src/: backend.rs  client.rs  config.rs  lib.rs  main.rs  status_map.rs
tests/: contract.rs
tests/fixtures/: comment_create_ok.json  create_issue_ok.json  get_one_issue.json  list_three_issues.json  team_states_ambiguous.json  team_states_custom.json  team_states_default.json  update_issue_ok.json  viewer_ok.json  viewer_unauthorized.json
