[package]
name = "animus-subject-linear"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Linear (linear.app) subject backend plugin for Animus"
repository = "https://github.com/launchapp-dev/animus-subject-linear"
homepage = "https://github.com/launchapp-dev/animus-cli"
readme = "README.md"
default-run = "animus-subject-linear"

[lib]
name = "animus_subject_linear"
path = "src/lib.rs"

[[bin]]
name = "animus-subject-linear"
path = "src/main.rs"

[dependencies]
animus-plugin-protocol  = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.4" }
animus-subject-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.4" }
animus-plugin-runtime   = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.4" }

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
